@@ -1,4 +1,4 @@
-.TH nget 1 "23 Jan 2002"
+.TH nget 1 "07 Feb 2002"
 .SH NAME
 nget \- retrieve files from NNTP hosts
 .SH SYNOPSIS
@@ -124,6 +124,8 @@ Subsections and specified in the form
 where data is any number of options.
 .P
 Global options that can be specified are: 
+.br
+String: cachedir (Specifies a different location to store cache files.  Could be used to share a single cache dir between a trusted group of users, to reduce HD/bandwidth usage, while still allowing each user to have their own config/midinfo files.)
 .br
 Integral: limit, tries, debug, delay, usegz(-1=default, 0=uncompressed, 1-9=gzip compression level), timeout
 .br
@@ -345,6 +347,8 @@ directory at the same time..)
 Where to put .nget4 directory. (put nget files $HOME/.nget4/)
 .IP "NGETHOME"
 Override HOME var (put nget files in $NGETHOME)
+.IP "NGETCACHE"
+Override HOME/NGETHOME vars and .ngetrc cachedir option (put nget cache files in $NGETCACHE)
 .SH FILES
 .PP
 .IP "~/.nget4/"
